--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <title>Web with Table</title>
+   <link rel="icon" type="image/png" href="buddhagg.png">
 </head>
 <body>
     <table border="2px" height="1000px" width="100%" rules="none">
